Fix backend student/admin CRUD with logs and cleanup

--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "wcserver_activty",
+  "name": "wcserver",
   "version": "1.0.0",
+  "description": "",
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js",
+    "dev": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "multer": "^2.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
